# easy_http_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dev.Dockerfile
.devcontainer/: devcontainer.json
docker/: dev.Dockerfile
ehs/: CMakeLists.txt
ehs/include/: server.hpp  utility.hpp
ehs/src/: connection.cpp  connection_secure.cpp  router.cpp  server.cpp
examples/http/: CMakeLists.txt  main.cpp
examples/https/: CMakeLists.txt  main.cpp
include/: connection.hpp  connection_secure.hpp  http_connection.hpp  router.hpp  server.hpp  util.hpp  utility.hpp
src/: connection.cpp  connection_secure.cpp  http_connection.cpp  router.cpp  server.cpp
tests/: CMakeLists.txt  router_test.cpp  router_test.hpp  tests.cpp  util_test.cpp  utility_test.hpp
